
name:                ivory-tower-helloworld
version:             0.1.0.0
synopsis:            Collection of example applications for Ivory Tower and STM32
-- description:
license:             BSD3
author:              Richard Marko
maintainer:          srk@48.io
copyright:           2020 Richard Marko
category:            Embedded
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Hello.Tests.Blink
                       Hello.Tests.Bluepill
                       Hello.Tests.SimpleBlink
                       Hello.Tests.I2CWhoAmI
                       Hello.Tests.IOT01A
                       Hello.Tests.Monstick
                       Hello.Tests.Monstick.RN2483
                       Hello.Tests.Platforms
                       Hello.Tests.Platforms.Types
                       Hello.Tests.Platforms.Bluepill
                       Hello.Tests.Platforms.IOT01A
                       Hello.Tests.Platforms.Monstick
                       Paths_ivory_tower_helloworld
                       Hello.Tests.CANSendRecv
                       Hello.Tests.CAN2UART
                       Hello.Tests.UART

  build-depends:       base
                     , monadLib
                     , ivory
                     , ivory-stdlib
                     , ivory-hw
                     , tower
                     , tower-config
                     , tower-hal
                     , tower-freertos-stm32
                     , ivory-bsp-stm32
                     , ivory-tower-base
                     , ivory-tower-drivers

  default-language:    Haskell2010
  ghc-options:         -Wall

executable blink-test-gen
  main-is:             BlinkTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , ivory-tower-helloworld
  ghc-options:          -Wall

executable bluepill-test-gen
  main-is:             BluepillTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , ivory-bsp-stm32
                     , ivory-tower-helloworld
  ghc-options:          -Wall

executable simpleblink-test-gen
  main-is:             SimpleBlinkTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , ivory-tower-helloworld
  ghc-options:          -Wall


executable cansendrecv-test-gen
  main-is:             CANSendRecvTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , ivory-tower-helloworld
  ghc-options:          -Wall

executable can2uart-test-gen
  main-is:             CAN2UARTTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , ivory-tower-helloworld
  ghc-options:          -Wall

executable i2c-whoami-test-gen
  main-is:             I2CWhoAmITest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , ivory-tower-helloworld
  ghc-options:          -Wall

executable iot01a-test-gen
  main-is:             IOT01ATest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , ivory-tower-helloworld
  ghc-options:          -Wall

executable monstick-test-gen
  main-is:             MonstickTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , ivory-tower-helloworld
  ghc-options:          -Wall

executable monstick-rn2483-test-gen
  main-is:             MonstickRN2483Test.hs
  hs-source-dirs:      test
  build-depends:       base
                     , ivory-tower-helloworld
  ghc-options:          -Wall

executable uart-test-gen
  main-is:             UARTTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , ivory-tower-helloworld
  ghc-options:          -Wall
